# tmux-sessionizer

./: .gitignore  .releaserc.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cut-release.yml  lint-pr-title.yml  release.yml  tag-release.yml
ai-docs/: CONVENTIONS.md  library-reference.md
docs/: SEMANTIC_RELEASE.md
examples/: tmux-sessionizer.toml
specs/: 0001-setup.md  0002-directory-scanning.md  0003-git-repo.md  0004-fuzzy-finding.md  0005-tmux.md  0006-integration.md  0007-perf.md  0008-docs.md  0009-config-file.md  0010-log-file.md  0011-log-config-refactor.md  0012-init-command.md  high-level.md  low-level.md
src/: config.rs  config_init.rs  container_detector.rs  directory_scanner.rs  error.rs  fuzzy_finder_interface.rs  git_repository_handler.rs  logging.rs  main.rs  path_utils.rs  session_manager.rs
src/config/: tests.rs
src/config_init/: tests.rs
src/container_detector/: tests.rs
src/directory_scanner/: tests.rs
src/fuzzy_finder_interface/: tests.rs
src/git_repository_handler/: tests.rs
src/logging/: tests.rs
src/path_utils/: tests.rs
src/session_manager/: tests.rs
