[package]
name = "tmux-sessionizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.2"
regex = "1.11.1"
skim = "0.17.2"
tempfile = "3.19.1"
thiserror = "2.0.12"
tmux_interface = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
walkdir = "2.5.0"
