[package]
name = "tmux-sessionizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
cross-xdg = "1.0.0"
dirs = "6.0.0"
git2 = "0.20.2"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.219"
serde_derive = "1.0.219"
skim = "0.17.2"
thiserror = "2.0.12"
tmux_interface = "0.3.2"
toml = "0.8.22"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "registry"] }
walkdir = "2.5.0"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.19.1"
